# map_localization

./: CMakeLists.txt  README.md  package.xml
cfg/: DynamicParam.cfg
config/: params.yaml  params1.yaml  params2.yaml  params_32.yaml  params_32_ndt.yaml  params_lio_sam_test.yaml
include/: ClosedPointsPlane.h  Scancontext.h  lidarFactor.hpp  tictoc.h  utility.h
include/faster_lio_sam/: FilterState.h  S2.hpp
launch/: driver_generator.launch  run.launch
launch/include/: module_loam.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz.launch
launch/include/config/: map_localization.rviz  robot.urdf.xacro  rviz.rviz  rviz_feature_test.rviz  rviz_new_feature.rviz
msg/: GPS_info.msg  cloud_feature_info.msg  cloud_info.msg
results/: operation_time.csv  update_state.csv
results/fast_lioVSlio_sam/: imu_odom_fast_lio.txt  lidar_odom.txt  operation_time.csv  update_state.csv
results/submaps/: imu_odom.csv  lidar_odom.csv  operation_time.csv
results/submaps_gps/: imu_odom_sub_gps.txt  lidar_odom.csv  operation_time.csv
results/wholemap/: gps_odom(true).csv  imu_odom.csv  lidar_odom.csv  operation_time.csv
results/wholemaps_gps/: gps_odom(true).csv  imu_odom_whole_gps.txt  lidar_odom.csv  operation_time.csv
src/: ClosedPointsPlane.cpp  Scancontext.cpp  featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  mapOptmization_feature.cpp  registrations.cpp  service.cpp
src/Filter/: mapOptmization_filter.cpp  mapOptmization_filter_S2.cpp
src/feature_opt/: featureExtraction_opt.cpp  mapOptmization_feature_opt.cpp
